# parsevasp

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.json  setup.py  tox.ini
.github/workflows/: ci.yml
ops/: run_coveralls.py  update_version.py
parsevasp/: __init__.py  base.py  chgcar.py  constants.py  doscar.py  eigenval.py  incar.py  incar_tags.yml  kpoints.py  outcar.py  parsevaspincar.py  parsevaspposcar.py  parsevaspxml.py  poscar.py  potcar.py  stream.py  stream.yml  utils.py  vasprun.py  xml.py
test/: .vasprun.xml.swp  INCAR  KPOINTS  KPOINTSLINE  OUTCAR_MAG_SINGLE  POSCAR  POSCAREXT  POSCARNAMES  POSCARVEL  basic.xml  magmom.xml  test_basic.py  test_incar.py  test_kpoints.py  test_outcar.py  test_poscar.py  test_xml.py  test_xml_event.py  test_xml_regular.py  testbasic.py  testdielectrics.py  testdisp.py  testincar.py  testkpoints.py  testkpointsexp.py  testkpointsline.py  testlocalfield.py  testpartial.py  testposcar.py  testposcarext.py  testrelax.py  testspin.py  utils.py  velocities.xml
tests/: #balla#  CHGCAR  CHGCAR.ncl  CHGCAR.spin  DOSCAR.ncl  DOSCAR.nopdos  DOSCAR.spin  KPOINTSEXP  KPOINTSGRG  OUTCAR.converged  OUTCAR.crashed  OUTCAR.nelm-breach-consistent  OUTCAR.nelm-breach-partial  OUTCAR.not-converged  OUTCAR.unfinished  OUTCAR_MAG  POSCAR  POSCARNAMES  gw.xml  overflow.xml  specific.xml  stdout  stdout_ZBRENT  stdout_nostart  test_chgcar.py  test_doscar.py  test_eigenval.py  test_incar.py  test_kpoints.py  test_outcar.py  test_poscar.py  test_potcar.py  test_stream.py  test_xml_event.py  test_xml_regular.py  utils.py
